--- a/compose-files/roaming/docker-compose.yaml
+++ b/compose-files/roaming/docker-compose.yaml
@@ -296,11 +296,35 @@ services:
     privileged: true
     cap_add:
       - ALL
+      - NET_ADMIN
     depends_on:
       - v-amf
       - v-smf
       - v-pcf
       - h-udr
+    
+  webui:
+    container_name: webui
+    image: 'webui:${OPEN5GS_VERSION}'
+    build:
+      context: ../../images/webui
+      args:
+        - OPEN5GS_VERSION=${OPEN5GS_VERSION}
+        - NODE_VERSION=${NODE_VERSION}
+    environment:
+      - DB_URI=mongodb://db.open5gs.org/open5gs
+      - PORT=9999
+      - HOSTNAME=0.0.0.0
+      - NODE_ENV=dev
+    command: 'run dev'
+    networks:
+      open5gs:
+        aliases:
+          - webui.open5gs.org
+    depends_on:
+      - db
+    ports:
+      - '0.0.0.0:9999:9999/tcp'
 
 networks:
   open5gs:
