--- a/configs/roaming/h-sepp.yaml
+++ b/configs/roaming/h-sepp.yaml
@@ -8,10 +8,12 @@ sepp:
   default:
     tls:
       server:
-        private_key: /etc/open5gs/tls/sepp1.key
-        cert: /etc/open5gs/tls/sepp1.crt
+        private_key: /etc/open5gs/default/tls/sepp1.key
+        cert: /etc/open5gs/default/tls/sepp1.crt
       client:
-        cacert: /etc/open5gs/tls/ca.crt
+        cacert: /etc/open5gs/default/tls/ca.crt
+        verify_client: false # Don't require client certificate verification
+        verify: false # Don't verify server certificates (for testing)
   sbi:
     server:
       - address: 0.0.0.0
@@ -21,7 +23,7 @@ sepp:
         - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:7777
   n32:
     server:
-      - sender: sepp.5gc.mnc001.mcc001.3gppnetwork.org
+      - sender: sepp1.localdomain # Changed to match certificate CN
         scheme: https
         address: 0.0.0.0
         port: 7778
@@ -31,7 +33,9 @@ sepp:
           port: 7779
     client:
       sepp:
-        - receiver: sepp.5gc.mnc070.mcc999.3gppnetwork.org
-          uri: https://sepp.5gc.mnc070.mcc999.3gppnetwork.org:7778
+        - receiver: sepp2.localdomain # Changed to short hostname for easier certificate management
+          uri: https://sepp2.localdomain:7778
+          verify_client: false
           n32f:
-            uri: https://sepp.5gc.mnc070.mcc999.3gppnetwork.org:7779
+            uri: https://sepp2.localdomain:7779
+            verify_client: false
