final tls version sepp for home and visiting

--- a/configs/roaming/h-sepp.yaml
+++ b/configs/roaming/h-sepp.yaml
@@ -16,11 +16,11 @@ sepp:
         verify: false # Don't verify server certificates (for testing)
   sbi:
     server:
-      - address: 0.0.0.0
-        port: 7777
+      - address: sepp.5gc.mnc001.mcc001.3gppnetwork.org
+        port: 80
     client:
       nrf:
-        - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:7777
+        - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:80
   n32:
     server:
       - sender: sepp1.localdomain # Changed to match certificate CN
