--- a/compose-files/roaming/docker-compose.yaml
+++ b/compose-files/roaming/docker-compose.yaml
@@ -97,7 +97,7 @@ services:
       args:
         - OPEN5GS_VERSION=${OPEN5GS_VERSION}
         - UBUNTU_VERSION=${UBUNTU_VERSION}
-    command: '-c /etc/open5gs/custom/sepp.yaml'
+    command: '-c /etc/open5gs/default/sepp.yaml'
     restart: unless-stopped
     networks:
       open5gs:
@@ -105,12 +105,12 @@ services:
           - sepp.5gc.mnc001.mcc001.3gppnetwork.org
           - sepp1.localdomain
     environment:
-      - SEPP_TYPE=sepp1
       - REGENERATE_CERTS=true
-      - TLS_DIR=/etc/open5gs/default/tls
+      - SEPP_FQDN=sepp1.localdomain
+      - SEPP_PLMN_FQDN=sepp.5gc.mnc001.mcc001.3gppnetwork.org
     configs:
       - source: h-sepp_config
-        target: /etc/open5gs/custom/sepp.yaml
+        target: /etc/open5gs/default/sepp.yaml
     ports:
       - '0.0.0.0:7777:7777/tcp' # SBI Server
       - '0.0.0.0:7778:7778/tcp' # N32c Server
@@ -279,7 +279,7 @@ services:
       args:
         - OPEN5GS_VERSION=${OPEN5GS_VERSION}
         - UBUNTU_VERSION=${UBUNTU_VERSION}
-    command: '-c /etc/open5gs/custom/sepp.yaml'
+    command: '-c /etc/open5gs/default/sepp.yaml'
     restart: unless-stopped
     networks:
       open5gs:
@@ -287,12 +287,12 @@ services:
           - sepp.5gc.mnc070.mcc999.3gppnetwork.org
           - sepp2.localdomain
     environment:
-      - SEPP_TYPE=sepp2
       - REGENERATE_CERTS=true
-      - TLS_DIR=/etc/open5gs/default/tls
+      - SEPP_FQDN=sepp2.localdomain
+      - SEPP_PLMN_FQDN=sepp.5gc.mnc070.mcc999.3gppnetwork.org
     configs:
       - source: v-sepp_config
-        target: /etc/open5gs/custom/sepp.yaml
+        target: /etc/open5gs/default/sepp.yaml
     ports:
       - '0.0.0.0:8777:7777/tcp' # SBI Server
       - '0.0.0.0:8778:7778/tcp' # N32c Server
