--- a/configs/roaming/v-sepp.yaml
+++ b/configs/roaming/v-sepp.yaml
@@ -12,6 +12,8 @@ sepp:
         cert: /etc/open5gs/default/tls/sepp2.crt
       client:
         cacert: /etc/open5gs/default/tls/ca.crt
+        verify_client: false # Don't require client certificate verification
+        verify: false # Don't verify server certificates (for testing)
   sbi:
     server:
       - address: sepp.5gc.mnc070.mcc999.3gppnetwork.org
@@ -33,5 +35,7 @@ sepp:
       sepp:
         - receiver: sepp1.localdomain
           uri: https://sepp1.localdomain:7778
+          verify_client: false
           n32f:
             uri: https://sepp1.localdomain:7779
+            verify_client: false
