added fix-missing on all nf

--- a/images/upf/Dockerfile
+++ b/images/upf/Dockerfile
@@ -16,7 +16,7 @@ ARG DEBIAN_FRONTEND="noninteractive"
 ARG YQ_VERSION="v4.30.6"
 
 # install dependencies
-RUN apt-get update && apt-get install libssl-dev libtalloc-dev libtins-dev \
+RUN apt-get update --fix-missing && apt-get install libssl-dev libtalloc-dev libtins-dev \
     libyaml-dev iproute2 iptables wget libmicrohttpd-dev -y
 
 # install yq
