--- a/images/bsf/Dockerfile
+++ b/images/bsf/Dockerfile
@@ -12,8 +12,9 @@ FROM ubuntu:${UBUNTU_VERSION}
 ARG DEBIAN_FRONTEND="noninteractive"
 
 # install dependencies
-RUN apt-get update && apt-get install libgnutls28-dev libgcrypt-dev libtalloc-dev \
-    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libyaml-dev -y
+RUN apt-get update --fix-missing && apt-get install -y \
+    libgnutls28-dev libgcrypt-dev libtalloc-dev \
+    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libyaml-dev
 
 # copy executable, default config and libs
 COPY --from=builder /open5gs/install/bin/open5gs-bsfd /usr/local/bin/open5gs-bsfd
