--- a/images/nssf/Dockerfile
+++ b/images/nssf/Dockerfile
@@ -11,9 +11,14 @@ FROM ubuntu:${UBUNTU_VERSION}
 # build-time arguments
 ARG DEBIAN_FRONTEND="noninteractive"
 
+RUN apt-get clean 
+RUN rm -rf /var/lib/apt/lists/*
+RUN apt-get upgrade -y
+
 # install dependencies
-RUN apt-get update --fix-missing && apt-get install libgnutls28-dev libgcrypt-dev libtalloc-dev \
-    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libyaml-dev -y
+RUN apt-get update --fix-missing && apt-get install -y \
+    libgnutls28-dev libgcrypt-dev libtalloc-dev \
+    libnghttp2-dev libmicrohttpd-dev libcurl4-gnutls-dev libyaml-dev
 
 # copy executable, default config and libs
 COPY --from=builder /open5gs/install/bin/open5gs-nssfd /usr/local/bin/open5gs-nssfd
