--- a/images/webui/Dockerfile
+++ b/images/webui/Dockerfile
@@ -9,6 +9,10 @@ FROM node:${NODE_VERSION}-bookworm AS builder
 ARG OPEN5GS_VERSION="v2.7.5"
 ARG DEBIAN_FRONTEND="noninteractive"
 
+RUN apt-get clean 
+RUN rm -rf /var/lib/apt/lists/*
+RUN apt-get upgrade -y
+
 # install dependencies
 RUN apt-get update && apt-get install git -y
 
