--- a/configs/roaming/h-sepp.yaml
+++ b/configs/roaming/h-sepp.yaml
@@ -9,11 +9,10 @@ sepp:
     tls:
       server:
         private_key: /etc/open5gs/default/tls/sepp1.key
-        cert: /etc/open5gs/default/tls/sepp1.crt
+        cert: /etc/open5gs/default/tls/sepp1.chain.crt
       client:
-        cacert: /etc/open5gs/default/tls/ca.crt
-        verify_client: false # Don't require client certificate verification
-        verify: false # Don't verify server certificates (for testing)
+        cacert: /etc/open5gs/default/tls/ca-bundle.crt
+        verify: true
   sbi:
     server:
       - address: sepp.5gc.mnc001.mcc001.3gppnetwork.org
@@ -23,7 +22,7 @@ sepp:
         - uri: http://nrf.5gc.mnc001.mcc001.3gppnetwork.org:80
   n32:
     server:
-      - sender: sepp1.localdomain # Changed to match certificate CN
+      - sender: sepp1.localdomain
         scheme: https
         address: 0.0.0.0
         port: 7778
@@ -33,7 +32,7 @@ sepp:
           port: 7779
     client:
       sepp:
-        - receiver: sepp2.localdomain # Changed to short hostname for easier certificate management
+        - receiver: sepp2.localdomain
           uri: https://sepp2.localdomain:7778
           verify_client: false
           n32f:
