--- a/configs/roaming/v-amf.yaml
+++ b/configs/roaming/v-amf.yaml
@@ -33,7 +33,11 @@ amf:
     - plmn_id:
         mcc: 999
         mnc: 70
-      tac: 000001
+      tac: 1
+    - plmn_id:
+        mcc: 001
+        mnc: 01
+      tac: 1
   plmn_support:
     - plmn_id:
         mcc: 999
@@ -41,9 +45,15 @@ amf:
       s_nssai:
         - sst: 1
           sd: 000001
+    - plmn_id:
+        mcc: 001
+        mnc: 01
+      s_nssai:
+        - sst: 1
+          sd: 000001
   security:
-    integrity_order: [NIA2, NIA1, NIA0]
-    ciphering_order: [NEA0, NEA1, NEA2]
+    integrity_order: [NIA2, NIA0, NIA1]
+    ciphering_order: [NEA0, NEA2, NEA1]
   network_name:
     full: Open5GS
   amf_name: open5gs-amf0
