--- a/images/upf/Dockerfile
+++ b/images/upf/Dockerfile
@@ -20,7 +20,7 @@ RUN rm -rf /var/lib/apt/lists/*
 RUN apt-get upgrade -y
 
 # install dependencies
-RUN apt-get update --fix-missing && apt-get install libssl-dev libtalloc-dev libtins-dev \
+RUN apt-get update && apt-get install libssl-dev libtalloc-dev libtins-dev \
     libyaml-dev iproute2 iptables wget libmicrohttpd-dev -y
 
 # install yq
