added config tshark file

--- a/compose-files/roaming/docker-compose.yaml
+++ b/compose-files/roaming/docker-compose.yaml
@@ -393,6 +393,12 @@ services:
         target: /etc/tshark/tshark.yaml
     depends_on:
       - db
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+        reservations:
+          memory: 512M
 
 networks:
   open5gs:
