--- a/compose-files/roaming/docker-compose.yaml
+++ b/compose-files/roaming/docker-compose.yaml
@@ -1,4 +1,25 @@
 services:
+  tshark:
+    container_name: tshark
+    image: 'nicolaka/netshoot'
+    command: >
+      sh -c "mkdir -p /captures &&
+             chmod 777 /captures &&
+             tshark -i br-ogs -f 'host 10.33.33.0/24' -w /captures/open5gs_all.pcap -P &
+             sleep infinity"
+    network_mode: 'host'
+    cap_add:
+      - NET_ADMIN
+      - NET_RAW
+    volumes:
+      - ./captures:/captures
+    healthcheck:
+      test: ['CMD', 'ls', '/captures']
+      interval: 2s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+    restart: unless-stopped
   db:
     container_name: db
     image: 'mongo:${MONGODB_VERSION}'
@@ -12,6 +33,8 @@ services:
       - db_config:/data/configdb
     ports:
       - '0.0.0.0:27017:27017/tcp'
+    depends_on:
+      - tshark
 
   h-nrf:
     container_name: h-nrf
@@ -30,6 +53,8 @@ services:
     configs:
       - source: h-nrf_config
         target: /etc/open5gs/custom/nrf.yaml
+    depends_on:
+      - tshark
 
   h-ausf:
     container_name: h-ausf
@@ -367,30 +392,6 @@ services:
       - db
     ports:
       - '0.0.0.0:9999:9999/tcp'
-
-  tshark:
-    container_name: tshark
-    image: 'nicolaka/netshoot' # This image contains tshark and many networking tools
-    command: >
-      sh -c "mkdir -p /captures &&
-             tshark -i br-ogs -f 'host 10.33.33.0/24' 
-             -w /captures/open5gs_all.pcap &
-             tshark -i br-ogs -f 'port 7777 or port 8777' 
-             -w /captures/sepp_sbi.pcap &
-             tshark -i br-ogs -f 'port 7778 or port 7779 or port 8778 or port 8779' 
-             -w /captures/n32_interfaces.pcap &
-             tshark -i br-ogs -f 'sctp' 
-             -w /captures/n1_n2_interfaces.pcap &
-             tshark -i br-ogs -f 'udp port 2152' 
-             -w /captures/n3_interface.pcap &
-             tail -f /dev/null"
-    network_mode: 'host'
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
-    volumes:
-      - ./captures:/captures
-    restart: unless-stopped
 
 networks:
   open5gs:
