--- a/configs/roaming/h-sepp.yaml
+++ b/configs/roaming/h-sepp.yaml
@@ -34,7 +34,7 @@ sepp:
       sepp:
         - receiver: sepp2.localdomain
           uri: https://sepp2.localdomain:7778
-          verify_client: false
+          verify_client: true
           n32f:
             uri: https://sepp2.localdomain:7779
-            verify_client: false
+            verify_client: true
