--- a/configs/roaming/v-sepp.yaml
+++ b/configs/roaming/v-sepp.yaml
@@ -35,7 +35,7 @@ sepp:
       sepp:
         - receiver: sepp1.localdomain
           uri: https://sepp1.localdomain:7778
-          verify_client: false
+          verify_client: true
           n32f:
             uri: https://sepp1.localdomain:7779
-            verify_client: false
+            verify_client: true
