--- a/configs/roaming/v-sepp.yaml
+++ b/configs/roaming/v-sepp.yaml
@@ -23,7 +23,7 @@ sepp:
   n32:
     server:
       - sender: sepp2.localdomain
-        
+
         scheme: https
         address: 0.0.0.0
         port: 7778
@@ -35,7 +35,7 @@ sepp:
       sepp:
         - receiver: sepp1.localdomain
           uri: https://sepp1.localdomain:7778
-          verify_client: false
+          verify_client: true
           n32f:
             uri: https://sepp1.localdomain:7779
-            verify_client: false
+            verify_client: true
