--- a/configs/roaming/v-sepp.yaml
+++ b/configs/roaming/v-sepp.yaml
@@ -1,18 +1,10 @@
 logger:
   file:
     path: /var/log/open5gs/sepp.log
+
 global:
-  max:
-    ue: 1024
+
 sepp:
-  default:
-    tls:
-      server:
-        private_key: /etc/open5gs/default/tls/sepp2.key
-        cert: /etc/open5gs/default/tls/sepp2.chain.crt
-      client:
-        cacert: /etc/open5gs/default/tls/ca-bundle.crt
-        verify: true
   sbi:
     server:
       - address: sepp.5gc.mnc070.mcc999.3gppnetwork.org
@@ -22,20 +14,8 @@ sepp:
         - uri: http://nrf.5gc.mnc070.mcc999.3gppnetwork.org:80
   n32:
     server:
-      - sender: sepp2.localdomain
-
-        scheme: https
-        address: 0.0.0.0
-        port: 7778
-        n32f:
-          scheme: https
-          address: 0.0.0.0
-          port: 7779
+      - sender: sepp.5gc.mnc070.mcc999.3gppnetwork.org
     client:
       sepp:
-        - receiver: sepp1.localdomain
-          uri: https://sepp1.localdomain:7778
-          verify_client: true
-          n32f:
-            uri: https://sepp1.localdomain:7779
-            verify_client: true
+        - receiver: sepp.5gc.mnc001.mcc001.3gppnetwork.org
+          uri: http://sepp.5gc.mnc001.mcc001.3gppnetwork.org:80
